@@ -23,16 +23,6 @@
  Is it possible to sort the Channel list by alphabetical order, or to
    add this as a preference?
 
- Could you add an option for filesystem MP3 player synchronisation to
-   not use folders, my device doesn't support folders so I have to 
-   copy the files back out?
- 
- I listen to 99% of my podcasts on my MP3 player and vary rarely from
-   inside gPodder so it would be very useful if you could add an option
-   to automatically mark all synchronised podcasts as played. Currently
-   I need to synchronise and then go through each episode and mark it
-   as played. 
-
                (suggested by Paul Elliott <omahns.home@gmail.com>)
 
  * My element for the wishlist: have gPodder produce a sound when a 
